--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gliiph",
+  "name": "gliiphi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "shuffle-seed": "^1.1.6",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
